# helm

./: AGENTS.md  CHANGELOG.md  CONVENTIONS.md  Cargo.toml  INSTALLATION.md  LOG_GUIDELINES.md  README.md  USAGE.md  justfile  repro
.github/workflows/: ci.yml
scripts/: runtime-parity-full.sh  runtime-parity-smoke.sh
src/: cli.rs  config.rs  database.rs  dependency_order.rs  display.rs  docker.rs  env.rs  main.rs  output.rs  parallel.rs  serve.rs  share.rs  swarm.rs
src/cli/: args.rs  dispatch.rs  handlers.rs  hooks.rs  support.rs
src/cli/args/: arg_enums.rs  commands.rs  config_commands.rs  env_commands.rs  lock_commands.rs  preset_commands.rs  profile_commands.rs  tests.rs
src/cli/dispatch/: bootstrap.rs  context.rs  primary.rs  secondary.rs
src/cli/handlers/: about_cmd.rs  app_create_cmd.rs  artisan_cmd.rs  composer_cmd.rs  config_cmd.rs  connect_cmd.rs  docker_ops.rs  doctor_cmd.rs  down_cmd.rs  dump_cmd.rs  env_cmd.rs  env_scrub_cmd.rs  exec_cmd.rs  health_cmd.rs  list_cmd.rs  lock_cmd.rs  log.rs  logs_cmd.rs  node_cmd.rs  open_cmd.rs  package_manager_cmd.rs  preset_cmd.rs  profile_cmd.rs  pull_cmd.rs  recreate_cmd.rs  relabel_cmd.rs  restart_cmd.rs  restore_cmd.rs  rm_cmd.rs  serialize.rs  serve_cmd.rs  service_scope.rs  share_cmd.rs  start_cmd.rs  status_cmd.rs  stop_cmd.rs  swarm_cmd.rs  task_cmd.rs  up_cmd.rs  update_cmd.rs  (+1 more)
src/cli/hooks/: run_phase.rs  selection.rs
src/cli/support/: app_runtime_context.rs  app_services.rs  artisan_command.rs  build_open_summary_json.rs  default_env_path.rs  ensure_sql_service.rs  env_output_path.rs  filter_services.rs  find_sensitive_env_values.rs  for_each_service.rs  matches_filter.rs  normalize_path.rs  open_in_browser.rs  open_summary_data.rs  persist_runtime_ports.rs  ports.rs  print_open_summary.rs  probe_http_status.rs  profile_names.rs  project_runtime_context.rs  random_free_port.rs  random_ports_preflight.rs  random_unused_port.rs  recreate_non_app_service.rs  recreate_service.rs  resolve_profile_targets.rs  resolve_tty.rs  resolve_up_services.rs  resolve_workspace_path.rs  run_doctor.rs  run_random_ports_flow.rs  run_service_command.rs  runtime_app_env.rs  scrub_env_file.rs  select_up_targets.rs  selected_runtime_services.rs  selected_services.rs  serve_health.rs  service_labels.rs  service_scope.rs  (+4 more)
src/config/: api.rs  domain_names.rs  expansion.rs  paths.rs  presets.rs  raw.rs  runtime_env.rs  service_methods.rs  services.rs  tests.rs  types.rs  validation.rs
src/config/api/: load_save.rs  lockfile.rs  migrate.rs  mod.rs  presets.rs  project.rs  runtime_env.rs  services.rs  sql_client_flavor.rs  toml_io.rs
src/config/expansion/: ports.rs  service.rs
src/config/paths/: mod.rs  search.rs  template.rs
src/config/presets/: app.rs  cache.rs  database.rs  object_store.rs  preset_defaults.rs  search.rs
src/config/raw/: mod.rs  service.rs  service_hook.rs  swarm.rs  swarm_git.rs
src/config/runtime_env/: mod.rs  naming.rs  ports.rs
src/config/service_methods/: connection.rs  domains.rs  identity.rs  mod.rs  network.rs  ports.rs
src/config/services/: lookup.rs  mod.rs  update.rs
src/config/tests/: core.rs  presets.rs  swarm.rs
src/config/types/: config_root.rs  enums.rs  lockfile.rs  mod.rs  service.rs  service_hook.rs  swarm.rs  swarm_git.rs
src/config/validation/: container_names.rs  domains.rs  mod.rs  swarm.rs
src/database/: dump.rs  post_restore.rs  restore.rs  setup.rs  sql_admin.rs
src/database/dump/: io.rs  mod.rs
src/database/post_restore/: connection.rs  mod.rs  options.rs
src/database/restore/: from_file.rs  from_stdin.rs  mod.rs  prepare.rs  process.rs
src/database/sql_admin/: common.rs  create.rs  dump.rs  reset.rs
src/display/: about.rs  about_style.rs  status.rs
src/docker/: cmd.rs  engine.rs  exec.rs  failure_message.rs  image_inspect.rs  image_pull.rs  inspect.rs  labels.rs  logs.rs  manage.rs  ops.rs  policy.rs  scheduler.rs  up.rs
src/docker/exec/: args.rs  failure_message.rs  mod.rs  run.rs
src/docker/health/: checks.rs  http.rs  mod.rs
src/docker/inspect/: command.rs  label.rs  mod.rs  parse.rs  tests.rs
src/docker/logs/: args.rs  (+4 more)
src/env/: files.rs  infer.rs  mapping.rs
src/javascript/: command.rs  mod.rs  project_files.rs  resolve.rs  types.rs
src/main_tests/: cli_flags.rs  dependency_guards.rs  dispatch.rs  injected_env.rs  mod.rs  swarm_targets.rs  usage_docs.rs
src/node/: command.rs  mod.rs  package_json.rs  project_files.rs  resolve.rs  types.rs
src/output/: colorize.rs  emit.rs  entry.rs  init.rs  layer.rs  mod.rs  normalize.rs  state.rs  stream.rs  tests.rs  tracing_emit.rs  types.rs
src/serve/: caddy.rs  container.rs  exec.rs  extensions.rs  health.rs  hosts.rs  image_build.rs  images.rs  orchestrate.rs  sql_client_flavor.rs  state.rs  trust.rs
src/share/: provider.rs  session.rs  state.rs  target.rs  tests.rs
src/swarm/: injection.rs  runner.rs  target_exec.rs  targets.rs
(+335 files in other folders)
