[package]
name = "helm"
version = "1.0.0"
edition = "2024"
description = "Zero-BS Laravel workspace orchestrator"
license = "MIT"
repository = "https://github.com/faustbrian/helm"
readme = "README.md"
keywords = ["laravel", "docker", "workspace", "orchestrator", "cli"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
toml = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
indicatif = "0.18"
colored = "3"
tabled = "0.20"
clap_complete = "4"
rayon = "1"
flate2 = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
time = { version = "0.3", features = ["formatting", "local-offset"] }

[lints.rust]
# Absolute safety - forbid unsafe code entirely
unsafe_code = "forbid"

# Documentation and code quality
missing_docs = "warn"

# Rust edition compatibility
rust_2018_idioms = { level = "deny", priority = -1 }
rust_2024_compatibility = { level = "warn", priority = -1 }

# Prevent common mistakes
let_underscore_drop = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unused_lifetimes = "deny"
unused_qualifications = "deny"

[lints.clippy]
# ============================================================================
# LINT GROUPS - Enable everything at strict levels
# ============================================================================
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }  # Some are unstable, so warn instead of deny
cargo = { level = "deny", priority = -1 }

# ============================================================================
# SAFETY-CRITICAL LINTS - No panics, no unwraps, no unsafe
# ============================================================================
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
unimplemented = "deny"
todo = "deny"
unreachable = "deny"
indexing_slicing = "deny"
string_slice = "deny"
unwrap_in_result = "deny"
exit = "deny"
undocumented_unsafe_blocks = "deny"
multiple_unsafe_ops_per_block = "deny"
mem_forget = "deny"

# ============================================================================
# OUTPUT CONTROL - Use tracing, not print/dbg
# ============================================================================
print_stdout = "deny"
print_stderr = "deny"
dbg_macro = "deny"

# ============================================================================
# CODE QUALITY - Prevent footguns and anti-patterns
# ============================================================================
large_include_file = "deny"
clone_on_ref_ptr = "deny"
empty_structs_with_brackets = "deny"
exhaustive_enums = "deny"
exhaustive_structs = "deny"
if_then_some_else_none = "deny"
infinite_loop = "deny"
lossy_float_literal = "deny"
missing_assert_message = "deny"
mod_module_files = "deny"
partial_pub_fields = "deny"
rest_pat_in_fully_bound_structs = "deny"
same_name_method = "deny"
self_named_module_files = "allow"
semicolon_inside_block = "deny"

# ============================================================================
# SHADOWING - Prevent confusing variable shadowing
# ============================================================================
shadow_reuse = "warn"
shadow_same = "deny"
shadow_unrelated = "deny"

# ============================================================================
# STRING HANDLING - Prevent inefficient string operations
# ============================================================================
str_to_string = "deny"
string_add = "deny"

# ============================================================================
# CODE ORGANIZATION - Enforce proper structure
# ============================================================================
tests_outside_test_module = "deny"
try_err = "deny"
unnecessary_self_imports = "deny"
unneeded_field_pattern = "deny"
unseparated_literal_suffix = "deny"
verbose_file_reads = "deny"
wildcard_enum_match_arm = "deny"

# ============================================================================
# TYPE SAFETY - Warn on potentially dangerous conversions
# ============================================================================
as_conversions = "warn"  # Too strict to deny everywhere
pattern_type_mismatch = "warn"

# ============================================================================
# MINIMAL ALLOWS - Only absolutely necessary exceptions
# ============================================================================
multiple_crate_versions = "allow"  # Dependency issue, not our code
module_name_repetitions = "allow"  # Style preference
must_use_candidate = "allow"       # Too noisy
redundant_pub_crate = "allow"      # Conflicts with unreachable_pub
option_if_let_else = "allow"       # Often less readable
